Fix oveflow issues
- fix horizontal scrolling issues because of huge texts, use clamp
- turn on oveflow hidden on 2xl viewport for horizontal scroll component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,11 @@
 }
 /* } */
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   color: var(--foreground-rgb);
   background: var(--background-rgb);
@@ -81,6 +86,9 @@ body {
   }
   .marker-none::marker {
     content: "";
+  }
+  .text-title-clamp {
+    font-size: clamp(9rem, -7.6337rem + 34.6535vw, 13.375rem);
   }
 }
 
